// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Canvas renders correctly 1`] = `
<Canvas
  className=""
  data={
    Object {
      "BlockGroup": Object {
        "block-623187": Object {
          "x": 158,
          "y": 256,
        },
        "block-624018": Object {
          "x": 367,
          "y": 368,
        },
        "block-73377": Object {
          "x": 253,
          "y": 525,
        },
      },
      "CanvasPosition": Object {
        "x": -67,
        "y": 230,
      },
      "LineGroup": Object {
        "line-592694": Object {
          "from": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "fromKey": "block-623187",
          "to": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "toKey": "block-624018",
        },
        "line-77619": Object {
          "from": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "fromKey": "block-73377",
          "to": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "toKey": "block-623187",
        },
      },
      "TagGroup": Object {
        "tag-626505": Object {
          "editable": false,
          "input": "test",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 167,
          "y": 284,
        },
        "tag-629962": Object {
          "editable": false,
          "input": "test2",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 405,
          "y": 398,
        },
        "tag-80986": Object {
          "editable": false,
          "input": "test3",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 286,
          "y": 555,
        },
      },
    }
  }
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": -67,
        "y": 230,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": -67,
          "y": 230,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={
          Object {
            "BlockGroup": Object {
              "block-623187": Object {
                "x": 158,
                "y": 256,
              },
              "block-624018": Object {
                "x": 367,
                "y": 368,
              },
              "block-73377": Object {
                "x": 253,
                "y": 525,
              },
            },
            "CanvasPosition": Object {
              "x": -67,
              "y": 230,
            },
            "LineGroup": Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-623187",
              },
            },
            "TagGroup": Object {
              "tag-626505": Object {
                "editable": false,
                "input": "test",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 167,
                "y": 284,
              },
              "tag-629962": Object {
                "editable": false,
                "input": "test2",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 405,
                "y": 398,
              },
              "tag-80986": Object {
                "editable": false,
                "input": "test3",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 286,
                "y": 555,
              },
            },
          }
        }
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(-67px,230px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={
            Object {
              "block-623187": Object {
                "x": 158,
                "y": 256,
              },
              "block-624018": Object {
                "x": 367,
                "y": 368,
              },
              "block-73377": Object {
                "x": 253,
                "y": 525,
              },
            }
          }
          lineData={
            Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-623187",
              },
            }
          }
          onChange={[Function]}
        >
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-623187"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 158,
                "y": 256,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 158,
                  "y": 256,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="block-group animate-appear react-draggable"
                data={
                  Object {
                    "block-623187": Object {
                      "x": 158,
                      "y": 256,
                    },
                    "block-624018": Object {
                      "x": 367,
                      "y": 368,
                    },
                    "block-73377": Object {
                      "x": 253,
                      "y": 525,
                    },
                  }
                }
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(158px,256px)",
                  }
                }
                transform={null}
              />
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-624018"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 367,
                "y": 368,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 367,
                  "y": 368,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="block-group animate-appear react-draggable"
                data={
                  Object {
                    "block-623187": Object {
                      "x": 158,
                      "y": 256,
                    },
                    "block-624018": Object {
                      "x": 367,
                      "y": 368,
                    },
                    "block-73377": Object {
                      "x": 253,
                      "y": 525,
                    },
                  }
                }
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(367px,368px)",
                  }
                }
                transform={null}
              />
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-73377"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 253,
                "y": 525,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 253,
                  "y": 525,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="block-group animate-appear react-draggable"
                data={
                  Object {
                    "block-623187": Object {
                      "x": 158,
                      "y": 256,
                    },
                    "block-624018": Object {
                      "x": 367,
                      "y": 368,
                    },
                    "block-73377": Object {
                      "x": 253,
                      "y": 525,
                    },
                  }
                }
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(253px,525px)",
                  }
                }
                transform={null}
              />
            </DraggableCore>
          </Draggable>
        </BlockGroup>
        <LineGroup
          data={
            Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-623187",
              },
            }
          }
          offset={
            Object {
              "x": -67,
              "y": 230,
            }
          }
          orientation="h"
        />
        <TagGroup
          data={
            Object {
              "tag-626505": Object {
                "editable": false,
                "input": "test",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 167,
                "y": 284,
              },
              "tag-629962": Object {
                "editable": false,
                "input": "test2",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 405,
                "y": 398,
              },
              "tag-80986": Object {
                "editable": false,
                "input": "test3",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 286,
                "y": 555,
              },
            }
          }
          onChange={[Function]}
        >
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-626505"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 167,
                "y": 284,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 167,
                  "y": 284,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="TagGroup animate-appear react-draggable"
                data={
                  Object {
                    "tag-626505": Object {
                      "editable": false,
                      "input": "test",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 167,
                      "y": 284,
                    },
                    "tag-629962": Object {
                      "editable": false,
                      "input": "test2",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 405,
                      "y": 398,
                    },
                    "tag-80986": Object {
                      "editable": false,
                      "input": "test3",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 286,
                      "y": 555,
                    },
                  }
                }
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "height": 32,
                    "touchAction": "none",
                    "transform": "translate(167px,284px)",
                    "width": 100,
                  }
                }
                transform={null}
              >
                test
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-629962"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 405,
                "y": 398,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 405,
                  "y": 398,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="TagGroup animate-appear react-draggable"
                data={
                  Object {
                    "tag-626505": Object {
                      "editable": false,
                      "input": "test",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 167,
                      "y": 284,
                    },
                    "tag-629962": Object {
                      "editable": false,
                      "input": "test2",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 405,
                      "y": 398,
                    },
                    "tag-80986": Object {
                      "editable": false,
                      "input": "test3",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 286,
                      "y": 555,
                    },
                  }
                }
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "height": 32,
                    "touchAction": "none",
                    "transform": "translate(405px,398px)",
                    "width": 100,
                  }
                }
                transform={null}
              >
                test2
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-80986"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 286,
                "y": 555,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 286,
                  "y": 555,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="TagGroup animate-appear react-draggable"
                data={
                  Object {
                    "tag-626505": Object {
                      "editable": false,
                      "input": "test",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 167,
                      "y": 284,
                    },
                    "tag-629962": Object {
                      "editable": false,
                      "input": "test2",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 405,
                      "y": 398,
                    },
                    "tag-80986": Object {
                      "editable": false,
                      "input": "test3",
                      "style": Object {
                        "height": 32,
                        "width": 100,
                      },
                      "x": 286,
                      "y": 555,
                    },
                  }
                }
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "height": 32,
                    "touchAction": "none",
                    "transform": "translate(286px,555px)",
                    "width": 100,
                  }
                }
                transform={null}
              >
                test3
              </div>
            </DraggableCore>
          </Draggable>
        </TagGroup>
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas when data is null, it should render correctly 1`] = `
<Canvas
  className=""
  data={null}
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={null}
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          onChange={[Function]}
        />
        <LineGroup
          data={Object {}}
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="h"
        />
        <TagGroup
          data={Object {}}
          onChange={[Function]}
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas when data is null, it should render correctly 2`] = `
<Canvas
  className=""
  data={Object {}}
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={Object {}}
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          onChange={[Function]}
        />
        <LineGroup
          data={Object {}}
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="h"
        />
        <TagGroup
          data={Object {}}
          onChange={[Function]}
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas when data is null, it should render correctly 3`] = `
<Canvas
  className=""
  data={Object {}}
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={Object {}}
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          onChange={[Function]}
        />
        <LineGroup
          data={Object {}}
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="h"
        />
        <TagGroup
          data={Object {}}
          onChange={[Function]}
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;
